refactor: rename some fields, add more Claude generated tests for query builder